--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -195,10 +195,11 @@
                         <div class="content-inner">
                             <p>For this course, you will need the following software:</p>
                             <ul>
-                                <li><a href="https://cran.r-project.org/" target="_blank" class="bodylinks">R (recommended)</a> or another Statistical Software Package.</li>
-                                <li><a href="https://rstudio.com/products/rstudio/download/#download" target="_blank" class="bodylinks">RStudio</a></li>
+                                <li><a href="https://cran.r-project.org/" target="_blank" class="bodylinks">R (recommended)</a> or another Statistical Software Package. (FREE; Available for Windows, Mac, and Linux Machines)</li>
+                                <li><a href="https://rstudio.com/products/rstudio/download/#download" target="_blank" class="bodylinks">RStudio</a> (FREE; Available for Windows, Mac, and Linux Machines</li>
                                 <li>Additional R Packages (and their dependencies): ggplot2, psych, sjstats, knitr</li>
                                 <li>Some type of Office Suite (e.g., Microsoft Office, LibreOffice, Google Doc) or Markdown.</li>
+                                <li>If there is a particular statistical software package you use in your major, you're welcome to use that. I will provide what support I can. (Note: depending on the package, you might not be able to do everything we'll cover in class)</li>
                             </ul>
                         </div>
                     </div>
