--- a/teaching.html
+++ b/teaching.html
@@ -70,6 +70,7 @@
               <li>MED 701: Quantitative Methods in Mathematics Education-Spring 2019</li>
               <li>STAT 150: Introduction to Statistics-Spring 2019</li>
               <li>MATH 550: Applied Probability and Statistics-Fall 2019</li>
+              <li>STAT 422: Distributions for Actuarial Science (Guided Study)</li>
               <li>STAT 150: Introduction to Statistics-Fall 2019</li>
             </ul>
           <h3>Arizona State University</h3>
