--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -600,7 +600,7 @@
                     <label for="faq52" class="lbl-toggle" tabindex="0">NEW!! Will you drop any of the lowest scores? Will we have an opportunity to make up/replace the lowest quiz score?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>At this time, I have no plans on dropping the lowest score of any type (homework, quiz, test). Generally speaking, individual students will not have an opportunity to make up/replace a quiz score. (Exceptions do exist for students who missed but followed the absence policy.</p>
+                            <p>At this time, I have no plans on dropping the lowest score of any type (homework, quiz, test). Generally speaking, individual students will not have an opportunity to make up/replace a quiz score. (Exceptions do exist for students who missed but followed the absence policy.)</p>
                         </div>
                     </div>
                 </div>
@@ -682,7 +682,7 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>I would encourage you to NOT try to convert between the rubric levels and the A/B/C/D/F scale. Rather, focus on the what the rubric level represents, comparing your answer to any posted solution, and any feedback you've given.</p>
-                            <p>Simply put, no, and 85% or higher does not mean you have an "A". That score indicates that you have demonstrated an understanding/way of thinking that I consider to be advanced. Similarly with the other rubric levels.</p>
+                            <p>Simply put, no, a 85% or higher does not mean you have an "A". That score indicates that you have demonstrated an understanding/way of thinking that I consider to be advanced. Similarly with the other rubric levels.</p>
                         </div>
                     </div>
                 </div>
@@ -728,7 +728,7 @@
                         <div class="content-inner">
                             <p>For each assignment, you accumulate points that come from the rubric levels. Those points then get blended into the Weighted Total formula: \(Total_{Weighted}=0.3(Test_1+Test_2)+0.25(Final)+0.2(Project)+0.2(\sum(HW)+\sum(Quiz))+0.05(Attn/Part)\).<br/>
                             <br/>
-                            The Weighted Total serves as an internal consistency checker for the grading team; in essence, this helps make sure that we are grading equitably. The scores that are used come from the rubric. I then used this weighted total as the fifth component for determining course grades. In essence, I use these values as part of a clustering analysis to ensure that students with similar score profiles end up getting the same grade (again, fairness).
+                            The Weighted Total serves as an internal consistency checker for the grading team; in essence, this helps make sure that we are grading equitably. The scores that are used come from the rubric. I then use this weighted total as the fifth component for determining course grades. In essence, I use the weighted totals as part of a clustering analysis to ensure that students with similar score profiles end up getting the same grade (again, fairness).
                             <br/>
                             <br/>
                             In essence, the Weighted Total is subservient to the Standards/Mastery Based grading.</p>
@@ -769,7 +769,7 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>At first glance, any learning outcome where you've only achieved Not Yet-Progressing, Not Yet-Beginning, and Not Shown don't appear to factor into your final grade. (The final grade is based primarily on the levels of Advanced and Proficient.) However, these levels do influence the Weighted Total, which is still used in the formulation of your final grade.</p>
-                            <p>Supposed that you have two student, where the only difference between them is that Student A has all non-Proficient+ outcomes at the Not Yet-Progressing level, and Student B is at the Not Yet-Beginning level. My their weighted totals will reflect this difference and they will [ideally] cluster with different groups. Student A could end up with a higher score than Student B; for example a C+ versus a C.</p>
+                            <p>Suppose that you have two student, where the only difference between them is that Student A has all non-Proficient+ outcomes at the Not Yet-Progressing level, and Student B is at the Not Yet-Beginning level. My their weighted totals will reflect this difference and they will [ideally] cluster with different groups. Student A could end up with a higher score than Student B; for example a C+ versus a C.</p>
                         </div>
                     </div>
                 </div>
@@ -778,7 +778,7 @@
                     <label for="faq61" class="lbl-toggle" tabindex="0">NEW!! Is there a formula you use to determine final grades?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>No, there is a not a formula. As I have stated before, I use a data driven methodology. I will try to type up an example using a past course for you. However, I will also give you a general overview of my methodology as a list of steps:</p>
+                            <p>No, there is a not a formula. As I have stated before, I use a data driven methodology. I will try to type up an example using a past course for you. Here is general overview of the methodology I use:</p>
                             <ol type="1">
                                 <li>Compile all necessary records: by question/part breakdowns of rubric levels, assignment category totals, the weighted total, and the mappings between question/part and learning outcomes</li>
                                 <li>Compute each student's value for individual learning outcomes</li>
@@ -786,7 +786,7 @@
                                 <li>Count the number of learning outcomes and categories that are at the Advanced and Proficient levels for each student</li>
                                 <li>Use a Clustering Method with the four counts plus the Weighted Total to group statistically similar students together</li>
                                 <li>Create a scatterplot of the number of outcomes at Advanced by the number of outcomes at Proficient for the entire set of students; Cluster results are used for initial coloring of points.</li>
-                                <li>Examine the plot in conjunction with references lines (e.g, 25%, 50%, 75% of outcomes) to determine what natural break occur in the data.</li>
+                                <li>Examine the plot in conjunction with references lines (e.g, 25%, 50%, 75% of outcomes) to determine what natural breaks occur in the data.</li>
                                 <li>Use these breaks to assign grades (A, B+, B, C+, C, D, F).</li>
                             </ol>
                             <p>If this sounds intense, you're right. This method means that I have an increased workload for grading (and record keeping) during the semester as well as evaluation at the end of the semester. However, this method does a better job at capturing your understandings than just a weighted total.</p>
