--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Neil Hatfield" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
     </script>
+    <! Current FAQ Count: 67>
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                 <br />
                 <h2>Frequently Asked Questions</h2>
                 <p>This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible.</p>
-                <p>Date of Last Update: 1/15/2020</p>
+                <p>Date of Last Update: 1/16/2020</p>
                 <h2>Key Course Information</h2>
                 <div class="wrap-collabsible">
                     <input id="faq1" class="toggle" type="checkbox">
@@ -246,6 +247,16 @@
                     </div>
                 </div>
                 <div class="wrap-collabsible">
+                    <input id="faq62" class="toggle" type="checkbox">
+                    <label for="faq62" class="lbl-toggle" tabindex="0">NEW!! Is a TI-89 allowed? What about graphing calculators in general?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>If you wish to use a graphing calculator, including a TI-89, you may. However, be aware that graphing calculators are NOT built for data analysis that you will be asked to do on homework, quizzes, tests, the project, or the final exam. I reserve the right to inspect your calculator at any point in time during a test or exam.</p>
+                            <p>I encourage you to use a statistical software package rather than a graphing calculator for this course.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
                     <input id="faq45" class="toggle" type="checkbox">
                     <label for="faq45" class="lbl-toggle" tabindex="0">What is Socrative?</label>
                     <div class="collapsible-content">
@@ -445,12 +456,12 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq30" class="toggle" type="checkbox">
-                    <label for="faq30" class="lbl-toggle" tabindex="0">I heard you record and post videos of class. Does this mean I can skip class?</label>
+                    <label for="faq30" class="lbl-toggle" tabindex="0">REVISED!! I heard you record and post videos of class. Does this mean I can skip class? (Class Attendance Policy)</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>No. I record my computer screen and audio record the classroom to make a video record for us. This allows you to take better notes at home and be fully engaged in class during class. These recordings are <strong>not</strong> a substitute for attending class.</p>
                             <p>Your success in this class is dependent upon your attendance and participation. You must attend each class meeting. If you must miss class, please contact me via email. I reserve the right to decide whether to excuse an absence.</p>
-                            <p>If you will be absent from class due to a religious observance or practice as well as participating in a university sanctioned event/activity, you are responsible for informing the instructor during the first week of class. Your instructor will work with you on alternative and reasonable arrangements for any time missed.</p>
+                            <p>If you will be absent from class due to a religious observance or practice as well as participating in an university sanctioned event/activity, you are responsible for informing the instructor during the first week of class. Additionally, you'll want to make use of the the <a href="https://undergrad.psu.edu/aappm/class_absence_accessible.pdf" class="bodylinks" target="_blank">University's Class Absence Form</a>. Your instructor will work with you on alternative and reasonable arrangements for any time missed.</p>
                         </div>
                     </div>
                 </div>
@@ -528,6 +539,15 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>You should figure out your groups as soon as you can. I will make an "assignment" that has an official due date for when I need to know who all is working together. I will announce this as part of the details in class.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq66" class="toggle" type="checkbox">
+                    <label for="faq66" class="lbl-toggle" tabindex="0">NEW!! Do we figure out who our teammates/groupmates are or will you assign them?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>I'm of the opinion that you are all adults and therefore can make your own groups. I will only intercede if absolutely necessary.</p>
                         </div>
                     </div>
                 </div>
@@ -611,6 +631,35 @@
                         <div class="content-inner">
                             <p>No. Curving grades results in two things: 1) the grader imposes a belief for how grades should be even when that is not borne out by any data, and 2) students are not treated equitably/fairly.</p>
                             <p>When a person uses Standards or Mastery Based grading (as I do), there is no need to do any curving.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq64" class="toggle" type="checkbox">
+                    <label for="faq64" class="lbl-toggle" tabindex="0">NEW!! When are the tests-i.e., in class or in the evening?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>I typically avoid evening tests. Our tests will either be held during class (50 minutes) or as Take Home Tests.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq65" class="toggle" type="checkbox">
+                    <label for="faq65" class="lbl-toggle" tabindex="0">NEW!! When is the final exam?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>The university has yet to schedule final exams for Spring 2020. I'll let you know as soon as I learn.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq67" class="toggle" type="checkbox">
+                    <label for="faq67" class="lbl-toggle" tabindex="0">NEW!! What do I do if I have multiple exams that are at the same time/overlap?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>Since regular tests will either be held in class or given as Take Home tests, there is no reason for there to be a time conflict for tests.</p>
+                            <p>However, you could experience a testing conflict for the Final Exam. This occurs when you have three (or more) final exams scheduled within one calendar day. To request relief, please see the <a href="http://www.registrar.psu.edu/exams/exam_overload.cfm" class="bodylinks" target="_blank">Registrar's Page</a>. The Filing Period for these requests runs from February 17, 2020 to March 8, 2020.</p>
+                            <p>Please note that the Registrar's Office will handle all Final Exam Scheduling and Rescheduling.</p>
                         </div>
                     </div>
                 </div>
@@ -874,13 +923,22 @@
                         </div>
                     </div>
                 </div>
-                <h2>Miscellaneous</h2>
+                <h2>NEW!! Miscellaneous</h2>
                 <div class="wrap-collabsible">
                     <input id="faq54" class="toggle" type="checkbox">
                     <label for="faq54" class="lbl-toggle" tabindex="0">NEW!! What is the difference between STAT 461 and STAT 380?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>STAT 380 is a data science course focusing on cleaning and manipulating data, working with databases, and other methods (e.g., decision trees, neural networks, and clustering). STAT 461 is about the Analysis of Variance toolkit/the Design of Studies and Experiments. While there is some overlap (using R, cleaning data), the two courses do focus on different things.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq63" class="toggle" type="checkbox">
+                    <label for="faq63" class="lbl-toggle" tabindex="0">NEW!! What is the difference between STAT 461 and STAT 462?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>STAT 462 is the Linear Regression course. While both toolkits come back to the same general linear model (typically expressed in matrix form), the nature of the questions and data we work with in the two courses are different; particularly the factors/regressors. Towards the end of the semester we will discuss ANCOVA which is the merger of ANOVA and Regression.</p>
                         </div>
                     </div>
                 </div>
