--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -818,7 +818,7 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>At first glance, any learning outcome where you've only achieved Not Yet-Progressing, Not Yet-Beginning, and Not Shown don't appear to factor into your final grade. (The final grade is based primarily on the levels of Advanced and Proficient.) However, these levels do influence the Weighted Total, which is still used in the formulation of your final grade.</p>
-                            <p>Suppose that you have two student, where the only difference between them is that Student A has all non-Proficient+ outcomes at the Not Yet-Progressing level, and Student B is at the Not Yet-Beginning level. My their weighted totals will reflect this difference and they will [ideally] cluster with different groups. Student A could end up with a higher score than Student B; for example a C+ versus a C.</p>
+                            <p>Suppose that you have two student, where the only difference between them is that Student A has all non-Proficient+ outcomes at the Not Yet-Progressing level, and Student B is at the Not Yet-Beginning level. Their weighted totals will reflect this difference and they will [ideally] cluster with different groups. Student A could end up with a higher score than Student B; for example a C+ versus a C.</p>
                         </div>
                     </div>
                 </div>
@@ -829,11 +829,11 @@
                         <div class="content-inner">
                             <p>No, there is a not a formula. As I have stated before, I use a data driven methodology. I will try to type up an example using a past course for you. Here is general overview of the methodology I use:</p>
                             <ol type="1">
-                                <li>Compile all necessary records: by question/part breakdowns of rubric levels, assignment category totals, the weighted total, and the mappings between question/part and learning outcomes</li>
-                                <li>Compute each student's value for individual learning outcomes</li>
-                                <li>Compute the category values (objective level) for each student's learning outcomes</li>
-                                <li>Count the number of learning outcomes and categories that are at the Advanced and Proficient levels for each student</li>
-                                <li>Use a Clustering Method with the four counts plus the Weighted Total to group statistically similar students together</li>
+                                <li>Compile all necessary records: by question/part breakdowns of rubric levels, assignment category totals, the weighted total, and the mappings between question/part and learning outcomes.</li>
+                                <li>Compute each student's value for individual learning outcomes.</li>
+                                <li>Compute the category values (objective level) for each student's learning outcomes.</li>
+                                <li>Count the number of learning outcomes and categories that are at the Advanced and Proficient levels for each student.</li>
+                                <li>Use a Clustering Method with the four counts plus the Weighted Total to group statistically similar students together.</li>
                                 <li>Create a scatterplot of the number of outcomes at Advanced by the number of outcomes at Proficient for the entire set of students; Cluster results are used for initial coloring of points.</li>
                                 <li>Examine the plot in conjunction with references lines (e.g, 25%, 50%, 75% of outcomes) to determine what natural breaks occur in the data.</li>
                                 <li>Use these breaks to assign grades (A, B+, B, C+, C, D, F).</li>
