--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Neil Hatfield" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
     </script>
-    <! Current FAQ Count: 67>
+    <! Current FAQ Count: 68>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                 <br />
                 <h2>Frequently Asked Questions</h2>
                 <p>This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible.</p>
-                <p>Date of Last Update: 1/16/2020</p>
+                <p>Date of Last Update: 1/20/2020</p>
                 <h2>Key Course Information</h2>
                 <div class="wrap-collabsible">
                     <input id="faq1" class="toggle" type="checkbox">
@@ -44,6 +44,20 @@
                             <h3>Section 3</h3>
                             <p>Time: Tuesdays and Thursdays, 1:35pm to 2:25pm; Fridays 1:25pm to 2:15pm
                                 <br /> Place: Tuesdays and Thursdays will be in 106 Wartik Lab; Fridays will be in 112 Boucke Building</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq68" class="toggle" type="checkbox">
+                    <label for="faq68" class="lbl-toggle" tabindex="0">NEW!! When/Where are Student Hours?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>Based on the results of the Doodle Poll, Student Hours will be in Thomas 425a at the following times: <br/>
+                            <br/>
+                            Mondays: 3:00pm to 4:30pm<br/>
+                            Thursdays: 3:00pm to 5:00pm<br />
+                            <br />
+                            You can always email me to set up additional times.</p>
                         </div>
                     </div>
                 </div>
