--- a/teaching.html
+++ b/teaching.html
@@ -31,7 +31,7 @@
           </ul>
         </div>
         <div id="contentnobars">
-          <h2 id="current"><a name="current"></a>Current Courses-Spring 2020<br />
+          <h2 id="current"><a name="current"></a>Current Courses-Spring 2021<br />
           </h2>
             <p>Stat 461: Analysis of Variance. Check out the syllabus/FAQ <a href="syllabusStat461.html" class="bodylinks">here</a>.</p>
           <br />
@@ -64,6 +64,10 @@
           <br />
           <h2 id="past"><a name="past"></a>Past Courses<br />
           </h2>
+          <h3>Pennsylvania State University</h3>
+          <ul>
+              <li>STAT 461: Analysis of Variance-Spring 2020</li>
+          </ul>
           <h3>University of Northern Colorado</h3>
           <ul>
               <li>MATH 550: Applied Probability and Statistics-Summer 2019</li>
@@ -115,7 +119,7 @@
                 src="1_Images/psu_mark.jpg"
                 class="noborder"
                 style="width: 318px; height: 85px;" /></a><br />
-            © 2020 Neil Hatfield <br />
+            © 2021 Neil Hatfield <br />
           </div>
         </div>
       </div>
